06-no-keepalive-patch/envoy.yml
---
static_resources:
  clusters:
  - name: puma
    type: STATIC
    lb_policy: ROUND_ROBIN
    connect_timeout: 1s
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        common_http_protocol_options:
          max_requests_per_connection: 1 # keepalive: OFF
          idle_timeout: 19s # Puma default idle timeout minus one second
        explicit_http_config:
          http_protocol_options: {} # use HTTP/1.1
    load_assignment:
      cluster_name: puma
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 3000

  listeners:
  - name: http_localhost
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          request_headers_timeout: 10s
          request_timeout: 30s
          stream_idle_timeout: 20s
          common_http_protocol_options:
            idle_timeout: 20s
          route_config:
            name: default
            virtual_hosts:
            - name: default
              domains: ['*']
              routes:
              - match:
                  prefix: /
                route:
                  cluster: puma
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  - name: https_localhost
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          request_headers_timeout: 10s
          request_timeout: 30s
          stream_idle_timeout: 20s
          common_http_protocol_options:
            idle_timeout: 20s
          route_config:
            name: default
            virtual_hosts:
            - name: default
              domains: ['*']
              routes:
              - match:
                  prefix: /
                route:
                  cluster: puma
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            # The following self-signed certificate pair is generated using:
            # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out a/front-proxy-crt.pem \
            #       -days 3650 -nodes -subj '/CN=front-envoy'
            - certificate_chain:
                inline_string: |
                  -----BEGIN CERTIFICATE-----
                  MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                  m+/R4XnmL4cKQ+5Z
                  -----END CERTIFICATE-----
              private_key:
                inline_string: |
                  -----BEGIN PRIVATE KEY-----
                  MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                  q5sGxGrC1RECGB5Zwx2S2ZY=
                  -----END PRIVATE KEY-----

# admin:
#   address:
#     socket_address:
#       address: 127.0.0.1
#       port_value: 8002
